# ma_keyboard

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  count_letters.py  notes.txt  rustfmt.toml  sync-corpus.sh
src/: constants.rs  corpus.rs  custom_err.rs  display.rs  enums.rs  eval_funcs.rs  kb_builders.rs  kb_components.rs  kb_helpers.rs  key.rs  key_template.rs  keyboard.rs  macros.rs  main.rs  mapped_swap.rs  meta_pop.rs  pop_helpers.rs  population.rs  setup.rs  structs.rs  utils.rs
